<resources>
    <string name="app_name">SqlitePraticeProject</string>
    <string name="title_main">登入畫面</string>
    <string name="title_register">註冊畫面</string>
    <string name="title_show">顯示畫面</string>
    <string name="title_login">使用者畫面</string>
    <string name="txv_account">帳號：</string>
    <string name="txv_password">密碼：</string>
    <string name="txv_check_password"> 確認密碼：</string>
    <string name="txv_name">姓名：</string>
    <string name="txv_phone">電話：</string>
    <string name="txv_login">登入</string>
    <string name="txv_cancle">取消</string>
    <string name="txv_register">註冊</string>
    <string name="txv_show">顯示</string>
    <string name="txv_back">返回</string>
    <string name="txv_ok">確認</string>


</resources>
